crates/jarl-cli/tests/integration/snapshots/integration__toml__unknown_toml_field.snap
---
source: crates/jarl-cli/tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name().normalize_temp_paths()"
---
success: false
exit_code: 255
----- stdout -----

----- stderr -----
jarl failed
  Cause: Failed to parse [TEMP_DIR]/jarl.toml:
TOML parse error at line 4, column 1
  |
4 | unknown_field = ["value"]
  | ^^^^^^^^^^^^^
unknown field `unknown_field`, expected one of `select`, `ignore`, `exclude`, `default-exclude`, `assignment`


----- args -----
check .
